Правки путей картинок

--- a/source/form.html
+++ b/source/form.html
@@ -3,12 +3,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/img/favicons/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/img/favicons/apple-icon-180x180.png">
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Подбор программы | HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
 <header class="header">
@@ -16,8 +16,8 @@
     <div class="header__logo">
       <a href="index.html" class="header__logo-link">
         <picture>
-          <source media="(min-width: 768px)" srcset="/img/logo-adaptive.svg">
-          <img class="header__logo-img" src="/img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
+          <source media="(min-width: 768px)" srcset="img/logo-adaptive.svg">
+          <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
         </picture>
       </a>
     </div>
@@ -103,14 +103,14 @@
               <span class="request__form-text">Email:*</span>
               <input class="request__form-field request__form-field--with-icon" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required>
               <svg class="request__form-icon" aria-hidden="true" focusable="false" width="20" height="20" fill="none">
-                <use href="/img/sprite.svg#mail-icon"></use>
+                <use href="img/sprite.svg#mail-icon"></use>
               </svg>
             </label>
             <label class="request__form-group request__form-group--contacts" for="phone">
               <span class="request__form-text">Телефон:*</span>
               <input class="request__form-field request__form-field--with-icon" type="tel" id="phone" name="phone" placeholder="8 (960) 900-60-90" required>
               <svg class="request__form-icon" aria-hidden="true" focusable="false" width="20" height="20" fill="none">
-                <use href="/img/sprite.svg#phone-icon"></use>
+                <use href="img/sprite.svg#phone-icon"></use>
               </svg>
             </label>
           </div>
@@ -182,7 +182,7 @@
       <a href="index.html" class="footer__logo-link">
         <svg class="footer__logo-img" aria-label="Логотип Cat Energy." focusable="false" width="129" height="24"
             fill="currentColor">
-          <use href="/img/sprite.svg#footer-logo"></use>
+          <use href="img/sprite.svg#footer-logo"></use>
         </svg>
       </a>
     </div>
@@ -191,21 +191,21 @@
         <li class="footer__social-item">
           <a class="footer__social-item-link footer__social-item-link--vkontakte" href="https://vk.com/htmlacademy">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#vk-icon"></use>
+              <use href="img/sprite.svg#vk-icon"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-item-link footer__social-item-link--youtube" href="https://www.youtube.com/user/htmlacademyru">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#yt-icon"></use>
+              <use href="img/sprite.svg#yt-icon"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-item-link footer__social-item-link--telegram" href="https://t.me/htmlacademy">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#telegram-icon"></use>
+              <use href="img/sprite.svg#telegram-icon"></use>
             </svg>
           </a>
         </li>
@@ -216,12 +216,12 @@
         <span class="footer__copyright-text" >HTML Academy</span>
         <svg class="footer__copyright-img" aria-label="Ссылка на HTML Academy." focusable="false" width="27" height="34"
             fill="currentColor">
-          <use href="/img/sprite.svg#developer-icon"></use>
+          <use href="img/sprite.svg#developer-icon"></use>
         </svg>
       </a>
     </div>
   </div>
 </footer>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
