--- a/source/index.html
+++ b/source/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/img/favicons/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/img/favicons/apple-icon-180x180.png">
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
 <header class="header header--index">
@@ -16,8 +16,8 @@
     <div class="header__logo header__logo--index">
       <a href="index.html" class="header__logo-link header__logo-link--index">
         <picture>
-          <source media="(min-width: 768px)" srcset="/img/logo-adaptive.svg">
-          <img class="header__logo-img" src="/img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
+          <source media="(min-width: 768px)" srcset="img/logo-adaptive.svg">
+          <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
         </picture>
       </a>
     </div>
@@ -59,11 +59,11 @@
         <a class="main-banner__btn" href="form.html">подобрать программу</a>
         <div class="main-banner__img-cont">
           <picture>
-            <source media="(min-width: 1440px)" srcset="/img/main/index-can-desktop-1x.png 1x,
+            <source media="(min-width: 1440px)" srcset="img/main/index-can-desktop-1x.png 1x,
               img/main/index-can-desktop-2x.png 2x">
-            <source media="(min-width: 768px)" srcset="/img/main/index-can-tablet-1x.png 1x,
+            <source media="(min-width: 768px)" srcset="img/main/index-can-tablet-1x.png 1x,
               img/main/index-can-tablet-2x.png 2x">
-            <img class="main-banner__img" src="/img/main/index-can-mobile-1x.png" srcset="/img/main/index-can-mobile-2x.png 2x"  width="280" height="270" alt="Продукция Cat Energy">
+            <img class="main-banner__img" src="img/main/index-can-mobile-1x.png" srcset="img/main/index-can-mobile-2x.png 2x"  width="280" height="270" alt="Продукция Cat Energy">
           </picture>
         </div>
       </div>
@@ -140,20 +140,20 @@
     <div class="example__interactive">
       <div class="example__interactive-item example__interactive-item--before">
         <picture>
-          <source media="(min-width: 768px)" srcset="/img/main/state-before-tablet-1x.png 1x,
+          <source media="(min-width: 768px)" srcset="img/main/state-before-tablet-1x.png 1x,
             img/main/state-before-tablet-2x.png 2x">
-          <img class="example__interactive-img" src="/img/main/state-before-mobile-1x.png"
+          <img class="example__interactive-img" src="img/main/state-before-mobile-1x.png"
               width="280" height="256" alt="Кот до программы"
-              srcset="/img/main/state-before-mobile-2x.png 2x">
+              srcset="img/main/state-before-mobile-2x.png 2x">
         </picture>
       </div>
       <div class="example__interactive-item example__interactive-item--after">
         <picture>
-          <source media="(min-width: 768px)" srcset="/img/main/state-after-tablet-1x.png 1x,
+          <source media="(min-width: 768px)" srcset="img/main/state-after-tablet-1x.png 1x,
             img/main/state-after-tablet-2x.png 2x">
-          <img class="example__interactive-img" src="/img/main/state-after-mobile-1x.png"
+          <img class="example__interactive-img" src="img/main/state-after-mobile-1x.png"
               width="280" height="256" alt="Кот после программы"
-              srcset="/img/main/state-after-mobile-2x.png 2x">
+              srcset="img/main/state-after-mobile-2x.png 2x">
         </picture>
       </div>
       <button type="button" class="example__interactive-btn">
@@ -185,7 +185,7 @@
       <a href="index.html" class="footer__logo-link">
         <svg class="footer__logo-img" aria-label="Логотип Cat Energy." focusable="false" width="129" height="24"
             fill="currentColor">
-          <use href="/img/sprite.svg#footer-logo"></use>
+          <use href="img/sprite.svg#footer-logo"></use>
         </svg>
       </a>
     </div>
@@ -194,21 +194,21 @@
         <li class="footer__social-item">
           <a class="footer__social-item-link" href="https://vk.com/htmlacademy">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#vk-icon"></use>
+              <use href="img/sprite.svg#vk-icon"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-item-link" href="https://www.youtube.com/user/htmlacademyru">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#yt-icon"></use>
+              <use href="img/sprite.svg#yt-icon"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-item-link" href="https://t.me/htmlacademy">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#telegram-icon"></use>
+              <use href="img/sprite.svg#telegram-icon"></use>
             </svg>
           </a>
         </li>
@@ -219,12 +219,12 @@
         <span class="footer__copyright-text" >HTML Academy</span>
         <svg class="footer__copyright-img" aria-label="Ссылка на HTML Academy." focusable="false" width="27" height="34"
             fill="currentColor">
-          <use href="/img/sprite.svg#developer-icon"></use>
+          <use href="img/sprite.svg#developer-icon"></use>
         </svg>
       </a>
     </div>
   </div>
 </footer>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
