--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,12 +3,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/img/favicons/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/img/favicons/apple-icon-180x180.png">
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Каталог | HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
 <header class="header">
@@ -16,8 +16,8 @@
     <div class="header__logo">
       <a href="index.html" class="header__logo-link">
         <picture>
-          <source media="(min-width: 768px)" srcset="/img/logo-adaptive.svg">
-          <img class="header__logo-img" src="/img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
+          <source media="(min-width: 768px)" srcset="img/logo-adaptive.svg">
+          <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
         </picture>
       </a>
     </div>
@@ -58,11 +58,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#1">
               <picture>
-                <source media="(min-width: 1440px)" srcset="/img/catalog/product-1-desktop-1x.png 1x,
-                  /img/catalog/product-1-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="/img/catalog/product-1-tablet-1x.png 1x,
-                  /img/catalog/product-1-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="/img/catalog/product-1-mobile-1x.png" srcset="/img/catalog/product-1-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Курица">
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-1-desktop-1x.png 1x,
+                  img/catalog/product-1-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-1-tablet-1x.png 1x,
+                  img/catalog/product-1-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-1-mobile-1x.png" srcset="img/catalog/product-1-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Курица">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#1">
@@ -89,11 +89,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#2">
               <picture>
-                <source media="(min-width: 1440px)" srcset="/img/catalog/product-2-desktop-1x.png 1x,
-                  /img/catalog/product-2-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="/img/catalog/product-2-tablet-1x.png 1x,
-                  /img/catalog/product-2-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="/img/catalog/product-2-mobile-1x.png" srcset="/img/catalog/product-2-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Курица">
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-2-desktop-1x.png 1x,
+                  img/catalog/product-2-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-2-tablet-1x.png 1x,
+                  img/catalog/product-2-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-2-mobile-1x.png" srcset="img/catalog/product-2-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Курица">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#2">
@@ -120,11 +120,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#3">
               <picture>
-                <source media="(min-width: 1440px)" srcset="/img/catalog/product-3-desktop-1x.png 1x,
-                  /img/catalog/product-3-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="/img/catalog/product-3-tablet-1x.png 1x,
-                  /img/catalog/product-3-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="/img/catalog/product-3-mobile-1x.png" srcset="/img/catalog/product-3-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Рыба">
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-3-desktop-1x.png 1x,
+                  img/catalog/product-3-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-3-tablet-1x.png 1x,
+                  img/catalog/product-3-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-3-mobile-1x.png" srcset="img/catalog/product-3-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Рыба">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#3">
@@ -151,11 +151,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#4">
               <picture>
-                <source media="(min-width: 1440px)" srcset="/img/catalog/product-4-desktop-1x.png 1x,
-                  /img/catalog/product-4-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="/img/catalog/product-4-tablet-1x.png 1x,
-                  /img/catalog/product-4-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="/img/catalog/product-4-mobile-1x.png" srcset="/img/catalog/product-4-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Рыба">
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-4-desktop-1x.png 1x,
+                  img/catalog/product-4-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-4-tablet-1x.png 1x,
+                  img/catalog/product-4-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-4-mobile-1x.png" srcset="img/catalog/product-4-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Рыба">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#4">
@@ -182,11 +182,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#5">
               <picture>
-                <source media="(min-width: 1440px)" srcset="/img/catalog/product-5-desktop-1x.png 1x,
-                /img/catalog/product-5-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="/img/catalog/product-5-tablet-1x.png 1x,
-                /img/catalog/product-5-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="/img/catalog/product-5-mobile-1x.png" srcset="/img/catalog/product-5-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Гречка">
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-5-desktop-1x.png 1x,
+                img/catalog/product-5-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-5-tablet-1x.png 1x,
+                img/catalog/product-5-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-5-mobile-1x.png" srcset="img/catalog/product-5-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Гречка">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#5">
@@ -213,11 +213,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#6">
               <picture>
-                <source media="(min-width: 1440px)" srcset="/img/catalog/product-6-desktop-1x.png 1x,
-                /img/catalog/product-6-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="/img/catalog/product-6-tablet-1x.png 1x,
-                /img/catalog/product-6-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="/img/catalog/product-6-mobile-1x.png" srcset="/img/catalog/product-6-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 1000 г Гречка">
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-6-desktop-1x.png 1x,
+                img/catalog/product-6-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-6-tablet-1x.png 1x,
+                img/catalog/product-6-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-6-mobile-1x.png" srcset="img/catalog/product-6-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 1000 г Гречка">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#6">
@@ -244,11 +244,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#7">
               <picture>
-                <source media="(min-width: 1440px)" srcset="/img/catalog/product-7-desktop-1x.png 1x,
-                /img/catalog/product-7-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="/img/catalog/product-7-tablet-1x.png 1x,
-                /img/catalog/product-7-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="/img/catalog/product-7-mobile-1x.png" srcset="/img/catalog/product-7-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Рис">
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-7-desktop-1x.png 1x,
+                img/catalog/product-7-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-7-tablet-1x.png 1x,
+                img/catalog/product-7-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-7-mobile-1x.png" srcset="img/catalog/product-7-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Рис">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#7">
@@ -343,7 +343,7 @@
       <a href="index.html" class="footer__logo-link">
         <svg class="footer__logo-img" aria-label="Логотип Cat Energy." focusable="false" width="129" height="24"
             fill="currentColor">
-          <use href="/img/sprite.svg#footer-logo"></use>
+          <use href="img/sprite.svg#footer-logo"></use>
         </svg>
       </a>
     </div>
@@ -352,21 +352,21 @@
         <li class="footer__social-item">
           <a class="footer__social-item-link footer__social-item-link--vkontakte" href="https://vk.com/htmlacademy">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#vk-icon"></use>
+              <use href="img/sprite.svg#vk-icon"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-item-link footer__social-item-link--youtube" href="https://www.youtube.com/user/htmlacademyru">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#yt-icon"></use>
+              <use href="img/sprite.svg#yt-icon"></use>
             </svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a class="footer__social-item-link footer__social-item-link--telegram" href="https://t.me/htmlacademy">
             <svg aria-hidden="true" focusable="false" width="28" height="22" fill="currentColor">
-              <use href="/img/sprite.svg#telegram-icon"></use>
+              <use href="img/sprite.svg#telegram-icon"></use>
             </svg>
           </a>
         </li>
@@ -377,12 +377,12 @@
         <span class="footer__copyright-text" >HTML Academy</span>
         <svg class="footer__copyright-img" aria-label="Ссылка на HTML Academy." focusable="false" width="27" height="34"
             fill="currentColor">
-          <use href="/img/sprite.svg#developer-icon"></use>
+          <use href="img/sprite.svg#developer-icon"></use>
         </svg>
       </a>
     </div>
   </div>
 </footer>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
