Выполнено задание по оптимизации графики

--- a/source/index.html
+++ b/source/index.html
@@ -79,6 +79,15 @@
             Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="functions__item-btn" href="catalog.html/#slim">
             <span class="functions__item-btn-text">каталог slim</span>
+            <svg class="functions__item-btn__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="10" fill="none">
+              <defs>
+                <marker id="arrow" markerWidth="26" markerHeight="15" refX="1" refY="2"
+                        viewbox="0 0 7 10" orient="auto-start-reverse">
+                  <path fill="#000" d="M2.5 2 .25 3.732V.268L2.5 2Z" />
+                </marker>
+              </defs>
+              <line x1="0" y1="50%" x2="82%" y2="50%" stroke-width="2" marker-end="url(#arrow)" stroke="#000" />
+            </svg>
           </a>
         </div>
         <div class="functions__item functions__item--weight-gain">
@@ -88,6 +97,15 @@
             необходимые мышцы!</p>
           <a class="functions__item-btn" href="catalog.html/#pro">
             <span class="functions__item-btn-text">каталог pro</span>
+            <svg class="functions__item-btn__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="10" fill="none">
+              <defs>
+                <marker id="arrow2" markerWidth="26" markerHeight="15" refX="1" refY="2" viewbox="0 0 7 10"
+                        orient="auto-start-reverse">
+                  <path fill="#000" d="M2.5 2 .25 3.732V.268L2.5 2Z" />
+                </marker>
+              </defs>
+              <line x1="0" y1="50%" x2="82%" y2="50%" stroke-width="2" marker-end="url(#arrow2)" stroke="#000" />
+            </svg>
           </a>
         </div>
       </div>
