Выполнено задание по оптимизации графики

--- a/source/index.html
+++ b/source/index.html
@@ -141,7 +141,7 @@
           <div class="example__properties">
             <div class="example__properties-item">
               <span class="example__properties-title">5 КГ</span>
-              <span class="example__properties-subtitle">снижение веса</span>
+              <span class="example__properties-subtitle">снижение<br/> веса</span>
             </div>
             <div class="example__properties-item">
               <span class="example__properties-title">60 ДНЕЙ</span>
@@ -176,10 +176,8 @@
       </div>
       <button type="button" class="example__interactive-btn">
         <span class="visually-hidden">Потяните влево или вправо</span>
-        <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40">
-          <rect width="38" height="38" x="1" y="1" fill="#fff" rx="19"/>
-          <path fill="currentColor" d="m16 11-8 9 8 9V11ZM32 20l-8-9v18l8-9Z"/>
-          <rect width="38" height="38" x="1" y="1" stroke="" stroke-width="2" rx="19"/>
+        <svg aria-hidden="true" focusable="false" width="40" height="40" fill="none" >
+          <use href="img/sprite.svg#icon-thumb"></use>
         </svg>
       </button>
     </div>
