--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,10 @@
   <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <title>Каталог | HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
 </head>
 <body class="body">
 <header class="header">
@@ -16,7 +19,8 @@
     <div class="header__logo">
       <a href="index.html" class="header__logo-link">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/logo-adaptive.svg">
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
           <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
         </picture>
       </a>
@@ -58,11 +62,16 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#1">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/product-1-desktop-1x.webp 1x,
+                  img/catalog/product-1-desktop-2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/product-2-tablet-1x.webp 1x,
+                  img/catalog/product-1-tablet-2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/product-1-mobile-1x.webp 1x, img/catalog/product-1-mobile-2x.webp 2x">
                 <source media="(min-width: 1440px)" srcset="img/catalog/product-1-desktop-1x.png 1x,
                   img/catalog/product-1-desktop-2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog/product-1-tablet-1x.png 1x,
                   img/catalog/product-1-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-1-mobile-1x.png" srcset="img/catalog/product-1-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Курица">
+                <img class="catalog__item-img" src="img/catalog/product-1-mobile-1x.png" srcset="img/catalog/product-1-mobile-2x.png 2x" loading="lazy" width="140" height="112" alt="Cat Energy PRO 500 г Курица">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#1">
@@ -89,11 +98,16 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#2">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/product-2-desktop-1x.webp 1x,
+                  img/catalog/product-2-desktop-2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/product-2-tablet-1x.webp 1x,
+                  img/catalog/product-2-tablet-2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/product-2-mobile-1x.webp 1x, img/catalog/product-2-mobile-2x.webp 2x">
                 <source media="(min-width: 1440px)" srcset="img/catalog/product-2-desktop-1x.png 1x,
                   img/catalog/product-2-desktop-2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog/product-2-tablet-1x.png 1x,
                   img/catalog/product-2-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-2-mobile-1x.png" srcset="img/catalog/product-2-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Курица">
+                <img class="catalog__item-img" src="img/catalog/product-2-mobile-1x.png" srcset="img/catalog/product-2-mobile-2x.png 2x" loading="lazy" width="140" height="112" alt="Cat Energy PRO 1000 г Курица">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#2">
@@ -120,11 +134,16 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#3">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/product-3-desktop-1x.webp 1x,
+                  img/catalog/product-3-desktop-2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/product-3-tablet-1x.webp 1x,
+                  img/catalog/product-3-tablet-2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/product-3-mobile-1x.webp 1x, img/catalog/product-3-mobile-2x.webp 2x">
                 <source media="(min-width: 1440px)" srcset="img/catalog/product-3-desktop-1x.png 1x,
                   img/catalog/product-3-desktop-2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog/product-3-tablet-1x.png 1x,
                   img/catalog/product-3-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-3-mobile-1x.png" srcset="img/catalog/product-3-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Рыба">
+                <img class="catalog__item-img" src="img/catalog/product-3-mobile-1x.png" srcset="img/catalog/product-3-mobile-2x.png 2x" loading="lazy" width="140" height="112" alt="Cat Energy PRO 500 г Рыба">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#3">
@@ -151,11 +170,16 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#4">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/product-4-desktop-1x.webp 1x,
+                  img/catalog/product-4-desktop-2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/product-4-tablet-1x.webp 1x,
+                  img/catalog/product-4-tablet-2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/product-4-mobile-1x.webp 1x, img/catalog/product-4-mobile-2x.webp 2x">
                 <source media="(min-width: 1440px)" srcset="img/catalog/product-4-desktop-1x.png 1x,
                   img/catalog/product-4-desktop-2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog/product-4-tablet-1x.png 1x,
                   img/catalog/product-4-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-4-mobile-1x.png" srcset="img/catalog/product-4-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Рыба">
+                <img class="catalog__item-img" src="img/catalog/product-4-mobile-1x.png" srcset="img/catalog/product-4-mobile-2x.png 2x" loading="lazy" width="140" height="112" alt="Cat Energy PRO 1000 г Рыба">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#4">
@@ -182,11 +206,16 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#5">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/product-5-desktop-1x.webp 1x,
+                  img/catalog/product-5-desktop-2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/product-5-tablet-1x.webp 1x,
+                  img/catalog/product-5-tablet-2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/product-5-mobile-1x.webp 1x, img/catalog/product-5-mobile-2x.webp 2x">
                 <source media="(min-width: 1440px)" srcset="img/catalog/product-5-desktop-1x.png 1x,
                 img/catalog/product-5-desktop-2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog/product-5-tablet-1x.png 1x,
                 img/catalog/product-5-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-5-mobile-1x.png" srcset="img/catalog/product-5-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Гречка">
+                <img class="catalog__item-img" src="img/catalog/product-5-mobile-1x.png" srcset="img/catalog/product-5-mobile-2x.png 2x" loading="lazy" width="140" height="112" alt="Cat Energy Slim 500 г Гречка">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#5">
@@ -213,11 +242,16 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#6">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/product-6-desktop-1x.webp 1x,
+                  img/catalog/product-6-desktop-2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/product-6-tablet-1x.webp 1x,
+                  img/catalog/product-6-tablet-2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/product-6-mobile-1x.webp 1x, img/catalog/product-6-mobile-2x.webp 2x">
                 <source media="(min-width: 1440px)" srcset="img/catalog/product-6-desktop-1x.png 1x,
                 img/catalog/product-6-desktop-2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog/product-6-tablet-1x.png 1x,
                 img/catalog/product-6-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-6-mobile-1x.png" srcset="img/catalog/product-6-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 1000 г Гречка">
+                <img class="catalog__item-img" src="img/catalog/product-6-mobile-1x.png" srcset="img/catalog/product-6-mobile-2x.png 2x" loading="lazy" width="140" height="112" alt="Cat Energy Slim 1000 г Гречка">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#6">
@@ -244,11 +278,16 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#7">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/product-7-desktop-1x.webp 1x,
+                  img/catalog/product-7-desktop-2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/product-7-tablet-1x.webp 1x,
+                  img/catalog/product-7-tablet-2x.webp 2x">
+                <source type="image/webp" srcset="img/catalog/product-7-mobile-1x.webp 1x, img/catalog/product-7-mobile-2x.webp 2x">
                 <source media="(min-width: 1440px)" srcset="img/catalog/product-7-desktop-1x.png 1x,
-                img/catalog/product-7-desktop-2x.png 2x">
+                  img/catalog/product-7-desktop-2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/catalog/product-7-tablet-1x.png 1x,
-                img/catalog/product-7-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-7-mobile-1x.png" srcset="img/catalog/product-7-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Рис">
+                  img/catalog/product-7-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-7-mobile-1x.png" srcset="img/catalog/product-7-mobile-2x.png 2x" loading="lazy" width="140" height="112" alt="Cat Energy Slim 500 г Рис">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#7">
