--- a/source/index.html
+++ b/source/index.html
@@ -8,20 +8,24 @@
   <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <title>HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" crossorigin="anonymous">
 </head>
 <body class="body">
-<header class="header header--index">
+<header class="header header--index header--nojs">
   <div class="header__container container">
     <div class="header__logo header__logo--index">
       <a href="index.html" class="header__logo-link header__logo-link--index">
         <picture>
-          <source media="(min-width: 768px)" srcset="img/logo-adaptive.svg">
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
           <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
         </picture>
       </a>
     </div>
-    <nav class="nav nav--index nav--nojs">
+    <nav class="nav nav--nojs">
       <ul class="nav__menu">
         <li class="nav__menu-item">
           <a href="index.html" class="nav__menu-item-link nav__menu-item-link--index nav__menu-item-link--active">
@@ -158,19 +162,25 @@
     <div class="example__interactive">
       <div class="example__interactive-item example__interactive-item--before">
         <picture>
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/main/state-before-tablet-1x.webp 1x,
+            img/main/state-before-tablet-2x.webp 2x">
+          <source type="image/webp" srcset="img/main/state-before-mobile-1x.webp 1x, img/main/state-before-mobile-2x.webp 2x">
           <source media="(min-width: 768px)" srcset="img/main/state-before-tablet-1x.png 1x,
             img/main/state-before-tablet-2x.png 2x">
           <img class="example__interactive-img" src="img/main/state-before-mobile-1x.png"
-              width="280" height="256" alt="Кот до программы"
+              loading="lazy" width="280" height="256" alt="Кот до программы"
               srcset="img/main/state-before-mobile-2x.png 2x">
         </picture>
       </div>
       <div class="example__interactive-item example__interactive-item--after">
         <picture>
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/main/state-after-tablet-1x.webp 1x,
+            img/main/state-after-tablet-2x.webp 2x">
+          <source type="image/webp" srcset="img/main/state-after-mobile-1x.webp 1x, img/main/state-after-mobile-2x.webp 2x">
           <source media="(min-width: 768px)" srcset="img/main/state-after-tablet-1x.png 1x,
             img/main/state-after-tablet-2x.png 2x">
           <img class="example__interactive-img" src="img/main/state-after-mobile-1x.png"
-              width="280" height="256" alt="Кот после программы"
+              loading="lazy" width="280" height="256" alt="Кот после программы"
               srcset="img/main/state-after-mobile-2x.png 2x">
         </picture>
       </div>
