--- a/source/index.html
+++ b/source/index.html
@@ -129,7 +129,8 @@
           <div class="how-work__description">Замените один-два приема обычной еды на наше функциональное питание.</div>
         </li>
         <li class="how-work__item how-work__item--time">
-          <div class="how-work__description">Уже через месяц наслаждайтесь изменениями к лучшему<br> вашего питомца!</div>
+          <div class="how-work__description">Уже через месяц наслаждайтесь изменениями к
+            <span class="how-work__description-placement">лучшему&nbsp;<br> вашего питомца!</span></div>
         </li>
       </ul>
     </div>
@@ -145,7 +146,7 @@
           <div class="example__properties">
             <div class="example__properties-item">
               <span class="example__properties-title">5 КГ</span>
-              <span class="example__properties-subtitle">снижение<br/> веса</span>
+              <span class="example__properties-subtitle">снижение&nbsp;<br/> веса</span>
             </div>
             <div class="example__properties-item">
               <span class="example__properties-title">60 ДНЕЙ</span>
@@ -201,7 +202,19 @@
           <span class="map__banner-address-city">Санкт-Петербург</span>
         </address>
       </div>
-      <div class="map__frame"></div>
+      <picture>
+        <source type="image/webp" media="(min-width: 1440px)" srcset="img/map-desktop.webp">
+        <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet.webp">
+        <source type="image/webp" srcset="img/map-mobile.webp">
+        <source media="(min-width: 1440px)" srcset="img/map-desktop.jpg">
+        <source media="(min-width: 768px)" srcset="img/map-tablet.jpg">
+        <img class="map__image" src="img/map-mobile.jpg" width="280" height="362" alt="Наше местоположение.">
+      </picture>
+      <iframe class="map__frame"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.32085871595826!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1680280165520!5m2!1sen!2sru"
+              style="border: 0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
     </div>
   </section>
 </main>
