Правки perfect pixel

--- a/source/form.html
+++ b/source/form.html
@@ -63,15 +63,15 @@
           <fieldset class="request__form-fieldset request__form-fieldset--cat-data">
             <label class="request__form-group" for="name">
               <span class="request__form-text">ИМЯ:*</span>
-              <input class="request__form-field" type="text" id="name" name="name" placeholder="барсик" required>
+              <input class="request__form-field" type="text" id="name" name="name" value="барсик" placeholder="барсик" required>
             </label>
             <label class="request__form-group" for="weight">
               <span class="request__form-text">Вес (кг):*</span>
-              <input class="request__form-field" type="text" id="weight" name="weight" placeholder="7" required>
+              <input class="request__form-field" type="text" id="weight" name="weight" value="7" placeholder="7" required>
             </label>
             <label class="request__form-group" for="age">
               <span class="request__form-text">Возраст (лет):</span>
-              <input class="request__form-field" type="text" id="age" name="age" placeholder="7" required>
+              <input class="request__form-field" type="text" id="age" name="age" value="7" placeholder="7" required>
             </label>
           </fieldset>
           <fieldset class="request__form-fieldset request__form-fieldset--course-type">
@@ -105,14 +105,14 @@
           <div class="request__form-inner">
             <label class="request__form-group request__form-group--contacts" for="email">
               <span class="request__form-text">Email:*</span>
-              <input class="request__form-field request__form-field--with-icon" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required>
+              <input class="request__form-field request__form-field--with-icon" type="email" id="email" name="email" value="kuklachev@gmail.com" placeholder="kuklachev@gmail.com" required>
               <svg class="request__form-icon" aria-hidden="true" focusable="false" width="20" height="20" fill="none">
                 <use href="img/sprite.svg#mail-icon"></use>
               </svg>
             </label>
             <label class="request__form-group request__form-group--contacts" for="phone">
               <span class="request__form-text">Телефон:*</span>
-              <input class="request__form-field request__form-field--with-icon request__form-field--tel" type="tel" id="phone" name="phone" placeholder="8 (960) 900-60-90" required>
+              <input class="request__form-field request__form-field--with-icon request__form-field--tel" type="tel" id="phone" name="phone" value="8 (960) 900-60-90" placeholder="8 (960) 900-60-90" required>
               <svg class="request__form-icon" aria-hidden="true" focusable="false" width="20" height="20" fill="none">
                 <use href="img/sprite.svg#phone-icon"></use>
               </svg>
