--- a/source/form.html
+++ b/source/form.html
@@ -159,7 +159,7 @@
         </fieldset>
         <div class="request__form-btn-cont">
           <button class="request__form-btn" type="submit">
-            Отправить
+            Отправить заявку
           </button>
           <span class="request__form-caption">* — Обязательные поля</span>
         </div>
@@ -181,9 +181,9 @@
         <source type="image/webp" srcset="img/map-mobile.webp">
         <source media="(min-width: 1440px)" srcset="img/map-desktop.jpg">
         <source media="(min-width: 768px)" srcset="img/map-tablet.jpg">
-        <img class="map__image" src="img/map-mobile.jpg" width="280" height="362" alt="Наше местоположение.">
+        <img class="map__image map__image--nojs" src="img/map-mobile.jpg" width="280" height="362" alt="Наше местоположение.">
       </picture>
-      <iframe class="map__frame"
+      <iframe class="map__frame map__frame--nojs"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253322!2d30.32085871595826!3d59.938716481876234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20191186!5e0!3m2!1sen!2sru!4v1680280165520!5m2!1sen!2sru"
               style="border: 0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade">
